--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Metamask snap to interact with Polkadot dapps.",
   "main": "build/index.js",
   "scripts": {
+    "lint": "yarn run lint:types && yarn run lint:style",
+    "lint:types": "tsc --noEmit --pretty",
+    "lint:style": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "start": "yarn run build && yarn run serve",
     "prebuild": "rm -rf build && rm -rf dist",
     "build": "yarn run build:tsc && yarn run build:snap",
@@ -43,7 +46,10 @@
     }
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
     "snaps-cli": "^0.4.1",
     "typescript": "^3.8.3"
   }
