--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "eslint": "^6.8.0",
     "snaps-cli": "^0.4.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "tweetnacl": "^1.0.3"
   }
 }
