Update permissions, extract functions to util and save generated keypair

--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
       "url": "http://localhost:8081/dist/bundle.js"
     },
     "initialPermissions": {
-      "alert": {}
+      "alert": {},
+      "getPluginState": {},
+      "updatePluginState": {}
     }
   },
   "devDependencies": {
