--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
     ],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es5",
+    "target": "es6",
     "noImplicitAny": true,
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
+    "noEmit": true,
     "sourceMap": true,
     "outDir": "build",
     "baseUrl": ".",
