Add basic confirmation dialog

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     },
     "initialPermissions": {
       "alert": {},
+      "confirm": {},
       "getPluginState": {},
       "updatePluginState": {}
     }
