--- a/babel.config.json
+++ b/babel.config.json
@@ -11,7 +11,8 @@
     "@babel/typescript"
   ],
   "plugins": [
-    "@babel/proposal-class-properties"
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ],
   "comments": false
 }
