Remove babel, add nf-snap and restore tsconfig file

--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "prebuild": "rm -rf build && rm -rf dist",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build": "yarn run build:types && yarn run build:js && yarn run build:snap",
-    "build:types": "tsc",
-    "build:js": "babel src node_modules --out-dir build --extensions \".ts,.tsx,.js\" --source-maps inline",
-    "build:snap": "snap build",
+    "build": "yarn run build:tsc && yarn run build:snap",
+    "build:tsc": "tsc --build --pretty",
+    "build:snap": "nf-snap build --stripComments",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
-    "watch:tsc": "yarn run build:tsc --watch",
+    "watch:tsc": "yarn run build:tsc --watch --stripComments",
     "watch:snap": "snap watch -s build/index.js",
-    "serve": "snap serve",
+    "serve": "nf-snap serve",
     "test": "yarn run test:unit",
     "test:unit": "mocha -r ts-node/register test/unit/**/*.ts"
   },
@@ -52,12 +51,7 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-typescript": "^7.8.3",
+    "@nodefactory/snaps-cli": "^1.0.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^7.5.2",
@@ -70,7 +64,6 @@
     "mocha": "^7.1.0",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
-    "snaps-cli": "^0.4.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   },
