--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build:tsc": "tsc --build --pretty",
     "build:snap": "nf-snap build --stripComments",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
-    "watch:tsc": "yarn run build:tsc --watch --stripComments",
-    "watch:snap": "snap watch -s build/index.js",
+    "watch:tsc": "yarn run build:tsc --watch",
+    "watch:snap": "nf-snap watch -s build/index.js",
     "serve": "nf-snap serve",
     "test": "yarn run test:unit",
     "test:unit": "mocha -r ts-node/register test/unit/**/*.ts"
@@ -68,7 +68,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@polkadot/api": "^1.7.1",
+    "@polkadot/wasm-crypto": "file:./wasm-crypto-stub",
+    "@polkadot/api": "^1.8.0-beta.10",
     "tweetnacl": "^1.0.3"
   }
 }
