--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@nodefactory/snaps-cli": "^1.0.0",
+    "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^7.5.2",
@@ -69,8 +70,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@polkadot/wasm-crypto": "file:./wasm-crypto-stub",
     "@polkadot/api": "^1.8.0-beta.10",
+    "@polkadot/wasm-crypto": "file:./wasm-crypto-stub",
+    "axios": "^0.19.2",
     "tweetnacl": "^1.0.3"
   }
 }
