--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "sass": "^1.26.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "@material-ui/lab": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
