Implement listing unit asset in metamask, refactor index page and extend initial permissions

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
       "alert": {},
       "confirm": {},
       "getPluginState": {},
-      "updatePluginState": {}
+      "updatePluginState": {},
+      "wallet_manageAssets": {}
     }
   },
   "devDependencies": {
