--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "latest",
     "@material-ui/styles": "^4.9.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,8 +18,7 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "sass": "^1.26.3",
-    "typescript": "~3.7.2",
-    "@material-ui/lab": "latest"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
