--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
   "dependencies": {
     "@polkadot/api": "^1.8.0-beta.10",
     "@polkadot/util": "2.7.1",
-    "@polkadot/wasm-crypto": "file:./wasm-crypto-stub",
     "axios": "^0.19.2",
     "tweetnacl": "^1.0.3"
+  },
+  "resolutions": {
+    "@polkadot/wasm-crypto": "file:./wasm-crypto-stub"
   }
 }
