--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@polkadot/api": "^1.8.0-beta.10",
     "@polkadot/util": "2.7.1",
     "axios": "^0.19.2",
+    "deepmerge": "^4.2.2",
     "tweetnacl": "^1.0.3"
   },
   "resolutions": {
