--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "sass": "^1.26.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "polkadot-snap": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
