--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "latest",
     "@material-ui/styles": "^4.9.6",
+    "@nodefactory/metamask-polkadot-adapter": "^1.0.0",
     "@polkadot/util": "^2.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,12 +16,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "polkadot-snap": "0.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "sass": "^1.26.3",
-    "typescript": "~3.7.2",
-    "polkadot-snap": "0.0.1"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
