--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -61,6 +61,7 @@
     "@types/sinon-chai": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
+    "@nodefactory/metamask-polkadot-types": "1.0.0",
     "chai": "^4.2.0",
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
