--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -20,7 +20,7 @@
     "watch:snap": "nf-snap watch --debug -s build/index.js",
     "serve": "nf-snap serve",
     "test": "yarn run test:unit",
-    "test:unit": "mocha -r ts-node/register \"test/unit/**/*.test.ts\""
+    "test:unit": "mocha --colors -r ts-node/register \"test/unit/**/*.test.ts\""
   },
   "repository": {
     "type": "git",
