--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "latest",
     "@material-ui/styles": "^4.9.6",
     "@nodefactory/metamask-polkadot-adapter": "^1.0.0",
+    "@nodefactory/metamask-polkadot-types": "^1.0.0",
     "@polkadot/util": "^2.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,7 +17,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "polkadot-snap": "0.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
