--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -9,6 +9,7 @@
     "@material-ui/styles": "^4.9.6",
     "@nodefactory/metamask-polkadot-adapter": "^1.0.0",
     "@nodefactory/metamask-polkadot-types": "^1.0.0",
+    "@polkadot/extension-dapp": "^0.24.1",
     "@polkadot/util": "^2.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
