--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build:snap": "lerna run build --scope polkadot-snap",
+    "build:adapter": "lerna run build --scope @nodefactory/metamask-polkadot-adapter",
     "start:snap": "lerna run serve --scope polkadot-snap",
     "start:example": "lerna run start --scope example",
     "predemo": "yarn run build:snap",
@@ -18,6 +19,11 @@
     "demo": "concurrently  --raw --kill-others \"yarn run start:snap\" \"yarn run start:example\""
   },
   "devDependencies": {
-    "lerna": "^3.20.2"
+    "lerna": "^3.20.2",
+    "@types/node": "^12.12.35",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "typescript": "^3.8.3"
   }
 }
