--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -10,7 +10,7 @@
     "lint:style": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "lint:fix": "yarn run lint --fix",
     "start": "yarn run build && yarn run serve",
-    "prebuild": "rm -rf build && rm -rf dist",
+    "prebuild": "rm -rf build dist ipfs",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "yarn run build:tsc && yarn run build:snap",
@@ -19,6 +19,9 @@
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
     "watch:tsc": "yarn run build:tsc --watch",
     "watch:snap": "nf-snap watch --debug -s build/index.js",
+    "prepublish": "yarn run build && mkdir ipfs && cp package.json ipfs/package.json",
+    "publish": "export BUNDLE_URL=`ipd --no-clipboard -O -p infura dist/bundle.js` && sed -i 's/http:\\/\\/localhost:8081\\/dist\\/bundle.js/https:\\/\\/ipfs.infura.io\\/ipfs\\/'\"$BUNDLE_URL\"'/g' ipfs/package.json && ipd --no-clipboard -O -p infura ipfs/package.json",
+    "postpublish": "rm -rf ipfs",
     "serve": "nf-snap serve",
     "test": "yarn run test:unit",
     "test:unit": "mocha --colors -r ts-node/register \"test/unit/**/*.test.ts\""
