--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -6,6 +6,7 @@
   "types": "./build/index.d.ts",
   "author": "NodeFactory <info@nodefactory.io>",
   "license": "Apache-2.0",
+  "private": false,
   "dependencies": {
     "@polkadot/api": "^1.11.2",
     "@polkadot/extension-inject": "^0.23.1"
@@ -27,5 +28,6 @@
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
     "typescript": "^3.8.3"
-  }
+  },
+  "gitHead": "fd3f9ffd400a1048cd6026c198ac18a96fbd950d"
 }
