--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -73,7 +73,8 @@
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
     "ts-node": "^8.6.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "strict-event-emitter-types": "^2.0.0"
   },
   "dependencies": {
     "@polkadot/api": "1.10.1",
