--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nodefactory/metamask-polkadot-adapter",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "main": "./build/index.js",
   "module": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -8,7 +8,12 @@
   "license": "Apache-2.0",
   "private": false,
   "homepage": "https://github.com/NodeFactoryIo/metamask-snap-polkadot/tree/master/packages/adapter",
-  "keywords": ["polkadot", "metamask", "snap", "substrate"],
+  "keywords": [
+    "polkadot",
+    "metamask",
+    "snap",
+    "substrate"
+  ],
   "publishConfig": {
     "access": "public"
   },
