--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polkadot-snap",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "private": true,
   "description": "Metamask snap to interact with Polkadot dapps.",
   "main": "build/index.js",
@@ -59,7 +59,7 @@
     }
   },
   "devDependencies": {
-    "@nodefactory/metamask-polkadot-types": "^0.1.2",
+    "@nodefactory/metamask-polkadot-types": "^0.2.0",
     "@nodefactory/snaps-cli": "^1.5.0-polkadot",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
@@ -73,9 +73,9 @@
     "mocha": "^7.1.1",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
+    "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^8.6.2",
-    "typescript": "^3.8.3",
-    "strict-event-emitter-types": "^2.0.0"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@polkadot/api": "^1.22.1",
