--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
-      - run: yarn install --frozen-lockfile
+          node-version: '16.x'
+      - run: yarn install --immutable
       - name: Run linter
         run: yarn run lint
       - name: Build
