--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -3,8 +3,8 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "@chainsafe/metamask-polkadot-adapter": "workspace^",
-    "@chainsafe/metamask-polkadot-types": "workspace^",
+    "@chainsafe/metamask-polkadot-adapter": "workspace:^",
+    "@chainsafe/metamask-polkadot-types": "workspace:^",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "latest",
