--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -3,12 +3,12 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
+    "@chainsafe/metamask-polkadot-adapter": "workspace:^",
+    "@chainsafe/metamask-polkadot-types": "workspace:^",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "latest",
     "@material-ui/styles": "^4.9.6",
-    "@chainsafe/metamask-polkadot-adapter": "^0.3.0",
-    "@chainsafe/metamask-polkadot-types": "^0.3.0",
     "@polkadot/api": "^1.22.1",
     "@polkadot/extension-dapp": "^0.31.1",
     "@polkadot/util": "^2.16.1",
