--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -15,15 +15,15 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "yarn run build:tsc && yarn run build:snap",
     "build:tsc": "tsc --build --pretty",
-    "build:snap": "nf-snap build --stripComments --debug --verbose",
-    "snapEval": "nf-snap eval",
+    "build:snap": "mm-snap build --src build/index.js --stripComments",
+    "snapEval": "mm-snap eval",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
     "watch:tsc": "yarn run build:tsc --watch",
-    "watch:snap": "nf-snap watch --debug -s build/index.js",
+    "watch:snap": "mm-snap watch --debug -s build/index.js",
     "prepublish": "yarn run build && mkdir ipfs && cp package.json ipfs/package.json",
     "publish": "export BUNDLE_URL=`ipd --no-clipboard -O -p infura dist/bundle.js` && sed -i 's/http:\\/\\/localhost:8081\\/dist\\/bundle.js/https:\\/\\/ipfs.infura.io\\/ipfs\\/'\"$BUNDLE_URL\"'/g' ipfs/package.json && ipd --no-clipboard -O -p infura ipfs/package.json",
     "postpublish": "rm -rf ipfs",
-    "serve": "nf-snap serve",
+    "serve": "mm-snap serve",
     "test": "yarn run test:unit",
     "test:unit": "mocha --colors -r ts-node/register \"test/unit/**/*.test.ts\""
   },
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@chainsafe/metamask-polkadot-types": "workspace:^",
-    "@nodefactory/snaps-cli": "^1.5.0-polkadot",
+    "@metamask/snaps-cli": "^0.15.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^7.5.2",
