--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -15,11 +15,11 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "yarn run build:tsc && yarn run build:snap",
     "build:tsc": "tsc --build --pretty",
-    "build:snap": "mm-snap build --src build/index.js --stripComments",
+    "build:snap": "mm-snap build --transpilationMode localAndDeps  --stripComments",
     "snapEval": "mm-snap eval",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
     "watch:tsc": "yarn run build:tsc --watch",
-    "watch:snap": "mm-snap watch --debug -s build/index.js",
+    "watch:snap": "mm-snap watch --debug",
     "prepublish": "yarn run build && mkdir ipfs && cp package.json ipfs/package.json",
     "publish": "export BUNDLE_URL=`ipd --no-clipboard -O -p infura dist/bundle.js` && sed -i 's/http:\\/\\/localhost:8081\\/dist\\/bundle.js/https:\\/\\/ipfs.infura.io\\/ipfs\\/'\"$BUNDLE_URL\"'/g' ipfs/package.json && ipd --no-clipboard -O -p infura ipfs/package.json",
     "postpublish": "rm -rf ipfs",
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@chainsafe/metamask-polkadot-types": "workspace:^",
-    "@metamask/snaps-cli": "^0.15.0",
+    "@metamask/snaps-cli": "0.15.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^7.5.2",
@@ -78,13 +78,14 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@polkadot/api": "^8.4.2",
-    "@polkadot/types": "^8.4.2",
-    "@polkadot/util": "^9.2.1",
+    "@polkadot/api": "^8.7.1",
+    "@polkadot/types": "^8.7.1",
+    "@polkadot/util": "9.4.1",
     "axios": "^0.19.2",
     "deepmerge": "^4.2.2"
   },
   "resolutions": {
+    "@polkadot/util": "9.4.1",
     "@polkadot/wasm-crypto": "file:./wasm-crypto-stub"
   }
 }
