--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "sass": "^1.26.3",
-    "typescript": "~4.6.4"
+    "typescript": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
