--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -75,13 +75,13 @@
     "sinon-chai": "^3.5.0",
     "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^8.6.2",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
     "@polkadot/api": "^8.7.1",
     "@polkadot/types": "^8.7.1",
     "@polkadot/util": "9.4.1",
-    "axios": "^0.19.2",
+    "axios": "0.27.2",
     "deepmerge": "^4.2.2"
   },
   "resolutions": {
