--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "typescript": "^4.7.2"
+    "typescript": "4.7.3"
   },
   "packageManager": "yarn@3.2.1"
 }
