--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -75,7 +75,7 @@
     "sinon-chai": "^3.5.0",
     "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^8.6.2",
-    "typescript": "^4.7.2"
+    "typescript": "4.7.3"
   },
   "dependencies": {
     "@polkadot/api": "^8.7.1",
