--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -14,7 +14,7 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "yarn run build:tsc && yarn run build:snap",
-    "build:tsc": "tsc --build --pretty",
+    "build:tsc": "tsc --pretty --project tsconfig.build.json",
     "build:snap": "mm-snap build --transpilationMode localAndDeps  --stripComments",
     "snapEval": "mm-snap eval",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
