--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -78,6 +78,7 @@
     "typescript": "4.7.3"
   },
   "dependencies": {
+    "@metamask/key-tree": "^3.0.1",
     "@polkadot/api": "^8.7.1",
     "@polkadot/types": "^8.7.1",
     "@polkadot/util": "9.4.1",
