--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -1,6 +1,12 @@
 name: ci
 # This workflow is triggered on pushes to the repository.
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - '**'
 
 jobs:
   build:
@@ -12,11 +18,22 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
+          cache: yarn
           node-version: '16.x'
       - run: yarn install --immutable
-      - name: Build
-        run: yarn run build
       - name: Run linter
         run: yarn run lint
+      - name: Build
+        run: yarn run build
+      - uses: tj-actions/verify-changed-files@v9
+        id: verify-changed-files
+        with:
+          files: |
+            packages/snap/snap.manifest.json
+      - name: Check if snap manifest updated
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        run: |
+          echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }}"
+          exit 1
       - name: Run tests
         run: yarn run test
