--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "polkadot-snap",
+  "name": "@chainsafe/polkadot-snap",
   "version": "0.3.0",
-  "private": true,
   "description": "Metamask snap to interact with Polkadot dapps.",
   "main": "build/index.js",
   "scripts": {
@@ -15,7 +14,10 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "yarn run build:tsc && yarn run build:snap",
     "build:tsc": "tsc --pretty --project tsconfig.build.json",
-    "build:snap": "mm-snap build --transpilationMode localAndDeps  --stripComments",
+    "build:snap": "yarn build:snap:bundle && yarn build:snap:postprocess && yarn build:snap:eval",
+    "build:snap:bundle": "mm-snap build -s build/index.js --verboseErrors --transpilationMode localAndDeps --stripComments --eval false",
+    "build:snap:postprocess": "mm-snap manifest --fix",
+    "build:snap:eval": "mm-snap eval -b dist/bundle.js --verboseErrors",
     "snapEval": "mm-snap eval",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
     "watch:tsc": "yarn run build:tsc --watch",
