--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,5 +1,10 @@
 name: Release
 on:
+  workflow_run:
+    workflows: [ ci ]
+    branches: [ master ]
+    types:
+      - completed
   push:
     branches:
       - master
