--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build:snap": "yarn workspace polkadot-snap build",
+    "build:snap": "yarn workspace @chainsafe/polkadot-snap build",
     "build:adapter": "yarn workspace @chainsafe/metamask-polkadot-adapter build",
     "start:snap": "yarn workspace @chainsafe/polkadot-snap serve",
     "start:example": "yarn workspace example start",
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "3.0.0",
     "typescript": "4.7.3"
   },
   "packageManager": "yarn@3.2.1"
