wip; fix set config

--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -4,6 +4,7 @@
     "skipLibCheck": true,
     "target": "ES2020",
     "baseUrl": ".",
+    "strictNullChecks": false,
     "paths": {
       "*": [
         "../../node_modules"
