--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "@chainsafe/metamask-polkadot-adapter": "workspace:^",
     "@chainsafe/metamask-polkadot-types": "workspace:^",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "latest",
-    "@material-ui/styles": "^4.9.6",
-    "@polkadot/api": "^8.7.1",
-    "@polkadot/extension-dapp": "^0.43.2",
-    "@polkadot/util": "^9.2.1",
+    "@material-ui/styles": "^4.11.5",
+    "@metamask/detect-provider": "^2.0.0",
+    "@polkadot/api": "^10.9.1",
+    "@polkadot/extension-dapp": "^0.46.5",
+    "@polkadot/util": "^12.3.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.39",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
