--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,8 @@
 compressionLevel: 0
-
 enableGlobalCache: true
-
 nmMode: hardlinks-local
-
 nodeLinker: node-modules
+checksumBehavior: update
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
