--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,8 @@ enableGlobalCache: true
 nmMode: hardlinks-local
 nodeLinker: node-modules
 
+checksumBehavior: update
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
