--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
   "ts-node": {
     "files": true,
   },
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
     "skipLibCheck": true,
     "target": "ES2020",
     "baseUrl": ".",
