--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@polkadot/api": "^10.9.1",
-    "@polkadot/extension-inject": "^0.46.5"
+    "@polkadot/extension-inject": "^0.46.5",
+    "@polkadot/types-augment": "^10.9.1"
   },
   "scripts": {
     "prebuild": "rm -rf build",
