--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -3,6 +3,18 @@
     "files": true,
   },
   "compilerOptions": {
+    "module": "commonjs",
+    "lib": [
+      "DOM",
+      "ES2015"
+    ],
+    "esModuleInterop": true,
+    "noImplicitAny": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
@@ -14,11 +26,15 @@
         "../../node_modules"
       ]
     },
-    "outDir": "./build"
+    "outDir": "./build",
+    "typeRoots": [
+      "../../node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*",
     "test/**/*"
   ],
+
   "files": ["../../node_modules/@metamask/snaps-types/dist/global.d.ts"]
 }
