--- a/packages/adapter/tsconfig.json
+++ b/packages/adapter/tsconfig.json
@@ -37,7 +37,7 @@
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
     "lib": ["es6", "dom"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "typeRoots": ["../../node_modules/@types", "src/types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules/**"],
