feat: Update metamask api to the latest version; Polkadot Api update (#164)

--- a/packages/adapter/tsconfig.json
+++ b/packages/adapter/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
+    "skipLibCheck": true,
     "inlineSourceMap": true,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
 
@@ -36,7 +37,7 @@
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
     "lib": ["es6", "dom"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "typeRoots": ["../../node_modules/@types", "src/types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules/**"],
