--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build:snap": "yarn workspace polkadot-snap build",
+    "build:snap": "yarn workspace @chainsafe/polkadot-snap build",
     "build:adapter": "yarn workspace @chainsafe/metamask-polkadot-adapter build",
     "start:snap": "yarn workspace @chainsafe/polkadot-snap serve",
     "start:example": "yarn workspace example start",
@@ -19,12 +19,16 @@
     "demo": "concurrently  --raw --kill-others \"yarn run start:snap\" \"yarn run start:example\""
   },
   "devDependencies": {
+    "@chainsafe/eslint-config": "^2.1.1",
     "@types/node": "^17.0.36",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "^8.17.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^8.47.0",
+    "prettier": "^3.0.2",
     "typescript": "4.7.3"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.6.1",
+  "dependencies": {
+    "@rushstack/eslint-patch": "^1.3.3"
+  }
 }
