--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -17,8 +17,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@polkadot/api": "^8.7.1",
-    "@polkadot/extension-inject": "^0.44.5"
+    "@polkadot/api": "^10.9.1",
+    "@polkadot/extension-inject": "^0.46.5",
+    "@polkadot/types-augment": "^10.9.1"
   },
   "scripts": {
     "prebuild": "rm -rf build",
