--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -27,7 +27,7 @@
     "postpublish": "rm -rf ipfs",
     "serve": "mm-snap serve",
     "test": "yarn run test:unit",
-    "test:unit": "mocha --colors -r ts-node/register \"test/unit/**/*.test.ts\""
+    "test:unit": "mocha --colors"
   },
   "repository": {
     "type": "git",
@@ -62,9 +62,9 @@
   },
   "devDependencies": {
     "@chainsafe/metamask-polkadot-types": "workspace:^",
-    "@metamask/snaps-cli": "^0.18.1",
+    "@metamask/snaps-cli": "^1.0.1",
     "@types/chai": "^4.2.10",
-    "@types/mocha": "^7.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/sinon": "^7.5.2",
     "@types/sinon-chai": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
@@ -80,17 +80,14 @@
     "typescript": "4.7.3"
   },
   "dependencies": {
-    "@metamask/key-tree": "^4.0.0",
-    "@metamask/snaps-types": "^0.26.2",
-    "@polkadot/api": "^8.7.1",
-    "@polkadot/types": "^8.7.1",
-    "@polkadot/util": "9.4.1",
-    "axios": "0.27.2",
-    "deepmerge": "^4.2.2",
+    "@metamask/key-tree": "^9.0.0",
+    "@metamask/snaps-types": "^1.0.1",
+    "@metamask/snaps-ui": "^1.0.1",
+    "@polkadot/api": "^10.9.1",
+    "@polkadot/keyring": "^12.3.2",
+    "@polkadot/types": "^10.9.1",
+    "@polkadot/util": "^12.3.2",
+    "deepmerge": "^4.3.1",
     "superstruct": "^1.0.3"
-  },
-  "resolutions": {
-    "@polkadot/util": "9.4.1",
-    "@polkadot/wasm-crypto": "file:./wasm-crypto-stub"
   }
 }
