--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -34,7 +34,8 @@ jobs:
       - name: Check if snap manifest updated
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
-          echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }}"
+          echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }} 
+          or @metamask/snaps-cli version is different from local version"
           exit 1
       - name: Run tests
         run: yarn run test
